testsuite/tests/interpreter_errors/eq_different_kinds/test.out
script.lkql:1:8: error: Cannot check equality between a Str and a Bool
1 | print ("Hello" == true)
  |        ^^^^^^^^^^^^^^^ 

